# python-modern-toolkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notes/: 01-modern-type-hints.md  02-pytest-patterns.md
src/exercises/: day_01_two_sum.py
src/python_daily_practice/: __init__.py
src/week_01_basics/: day_01_two_sum.py
tests/exercises/: test_day_01_two_sum.py
